# Avarice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  engine.cpp  entrypoint.h
core/: game.cpp  game.h  settings_manager.cpp  settings_manager.h
include/: game.h  service_locator.h  window.h
inputs/: input_devices.h  input_key.h  input_manager.h
platform/: custom_window.cpp  custom_window.h  filesystem.h  glfw_window.cpp  glfw_window.h  window.h
rendering/: buffer.h  images.h  renderer.h  shader.h  texture.h  types.h
shaders/: triangle.frag  triangle.vert
src/: engine.h  game.cpp  game.h  service_locator.h  window.h
src/buffers/: buffer.cpp  buffer.h  command_buffer.cpp  command_pool.cpp
src/devices/: instance.cpp  logical_device.cpp  logical_device.h  physical_device.cpp  surface.h
src/input/: input_manager.cpp  multiplatform_input.cpp  multiplatform_input.h
src/inputs/: input_manager.cpp  multiplatform_input.h
src/platform/: custom_window.cpp  custom_window.h  sdl_window.cpp  sdl_window.h
src/rendering/: graphics.cpp  graphics.h  model.cpp  model.h  renderer.h  rendermanager.h  renderstage.cpp  renderstage.h  subrender.h  vulkan_initializers.cpp  vulkan_initializers.h  vulkan_pipeline_builder.cpp  vulkan_pipeline_builder.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_utilities.cpp  vulkan_utilities.h
src/rendering/SDL/: sdl_renderer.cpp  sdl_renderer.h
src/rendering/buffers/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h
src/rendering/descriptors/: descriptor.h  descriptor_set.cpp  descriptor_set.h  descriptors_handler.h
src/rendering/devices/: instance.cpp  instance.h  physical_device.h  surface.cpp
src/rendering/pipelines/: pipeline.h  pipeline_graphics.cpp  pipeline_graphics.h  shader.h
src/rendering/renderpass/: framebuffer.cpp  framebuffer.h  renderpass.cpp  renderpass.h  swapchain.cpp  swapchain.h
src/rendering/vulkan/: vulkan_buffer.cpp  vulkan_buffer.h  vulkan_camera.cpp  vulkan_camera.h  vulkan_descriptors.cpp  vulkan_descriptors.h  vulkan_device.cpp  vulkan_device.h  vulkan_frame_info.h  vulkan_game_object.cpp  vulkan_game_object.h  vulkan_includes.h  vulkan_initializers.cpp  vulkan_initializers.h  vulkan_model.cpp  vulkan_model.h  vulkan_pipeline_builder.cpp  vulkan_pipeline_builder.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swap_chain.cpp  vulkan_swap_chain.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_types.h  vulkan_utilities.cpp  vulkan_utilities.h
src/utils/: elapsed_time.cpp  elapsed_time.h  non_copyable.h  time.h  time.inl  type_info.h  util.h  vector2.h  vector2.inl
